--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Yesterday</h1>
-    <p>by The Beatles</p>
+    <p class="singer-name">by The Beatles</p>
     <p>
       Yesterday<br />All my troubles seemed so far away<br />Now it looks as
       though they're here to stay<br />Oh, I believe in yesterday
