--- a/index.html
+++ b/index.html
@@ -6,31 +6,33 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Yesterday</h1>
-    <p class="singer-name">by The Beatles</p>
-    <p>
-      Yesterday<br />All my troubles seemed so far away<br />Now it looks as
-      though they're here to stay<br />Oh, I believe in yesterday
-    </p>
-    <p>
-      Suddenly<br />I'm not half the man I used to be<br />There's a shadow
-      hanging over me<br />Oh, yesterday came suddenly
-    </p>
-    <p>
-      Why she had to go?<br />I don't know, she wouldn't say<br />I said
-      something wrong?<br />Now I long for yesterday
-    </p>
-    <p>
-      Yesterday<br />Love was such an easy game to play<br />Now I need a place
-      to hide away<br />Oh, I believe in yesterday
-    </p>
-    <p>
-      Why she had to go?<br />I don't know, she wouldn't say<br />I said
-      something wrong?<br />Now I long for yesterday
-    </p>
-    <p>
-      Yesterday<br />Love was such an easy game to play<br />Now I need a place
-      to hide away<br />Oh, I believe in yesterday
-    </p>
+    <div class="container">
+      <h1>Yesterday</h1>
+      <p class="singer-name">by The Beatles</p>
+      <p>
+        Yesterday<br />All my troubles seemed so far away<br />Now it looks as
+        though they're here to stay<br />Oh, I believe in yesterday
+      </p>
+      <p>
+        Suddenly<br />I'm not half the man I used to be<br />There's a shadow
+        hanging over me<br />Oh, yesterday came suddenly
+      </p>
+      <p>
+        Why she had to go?<br />I don't know, she wouldn't say<br />I said
+        something wrong?<br />Now I long for yesterday
+      </p>
+      <p>
+        Yesterday<br />Love was such an easy game to play<br />Now I need a
+        place to hide away<br />Oh, I believe in yesterday
+      </p>
+      <p>
+        Why she had to go?<br />I don't know, she wouldn't say<br />I said
+        something wrong?<br />Now I long for yesterday
+      </p>
+      <p>
+        Yesterday<br />Love was such an easy game to play<br />Now I need a
+        place to hide away<br />Oh, I believe in yesterday
+      </p>
+    </div>
   </body>
 </html>
