--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Yesterday</h1>
+      <h1>Yesterday - my favourite song</h1>
       <p class="singer-name">by The Beatles</p>
       <p>
         Yesterday<br />All my troubles seemed so far away<br />Now it looks as
